--- a/src/style.css
+++ b/src/style.css
@@ -400,7 +400,7 @@ a:visited {
 
     border-radius: 9px;
 
-    //background-color: var(--blue);
+    /* background-color: var(--blue); */
     -webkit-box-shadow: var(--down-shadow);
     -moz-box-shadow: var(--down-shadow);
     box-shadow: var(--down-shadow);
